# CareSyncAI

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  requirements.txt
.continue/agents/: new-config.yaml
ai-engine/: .env.example  Dockerfile  README.md  pyproject.toml
ai-engine/src/cares_ai/: __init__.py  main.py
ai-engine/src/cares_ai/api/: baseline.py  diagnosis.py  health.py  narrative.py  risk.py
ai-engine/src/cares_ai/config/: settings.py
ai-engine/src/cares_ai/engines/baseline/: engine.py  window.py
ai-engine/src/cares_ai/engines/diagnosis/: __init__.py  confidence_engine.py  dataset_generator.py  diagnosis_engine.py  feature_extractor.py  patient_checker_model.py  train_model.py
ai-engine/src/cares_ai/engines/narrative/: engine.py
ai-engine/src/cares_ai/engines/risk/: engine.py
ai-engine/src/cares_ai/models/: domain.py
ai-engine/tests/: test_baseline_engine.py  test_clinical_intelligence.py  test_diagnosis_engine.py  test_narrative_engine.py  test_patient_checker_api.py  test_risk_engine.py
backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
backend/src/: app.ts  index.ts
backend/tests/: clinical intelligence.test.ts  database.service.test.ts  integration.persistence.test.ts  (+2 more)
database/: README.md  schema.sql
docs/: architecture.md  master-spec.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts  vitest.config.ts
scripts/: setup.sh
simulator/: .env.example  Dockerfile  README.md  requirements.txt
(+139 files in other folders)
