[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caresync-ai-engine"
version = "0.1.0"
description = "CareSync AI — Baseline, risk scoring, and clinical narrative engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "numpy>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]
ml = ["scikit-learn>=1.5.0", "pandas>=2.2.0", "pyarrow>=17.0.0", "xgboost>=2.1.0", "lightgbm>=4.5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
